[gd_scene load_steps=3 format=3 uid="uid://bqbapvoplci1a"]

[ext_resource type="Script" uid="uid://dpdjroxhudiun" path="res://items/weapon.gd" id="1_c7r48"]

[sub_resource type="Resource" id="Resource_fuyg6"]
metadata/__load_path__ = "res://assets/sprites/wand_0001.png"

[node name="Weapon" type="Node2D"]
script = ExtResource("1_c7r48")

[node name="Launcher" type="Marker2D" parent="."]
position = Vector2(11, 0)

[node name="Sprite" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(6, 0)
texture = SubResource("Resource_fuyg6")

[node name="RechargeTimer" type="Timer" parent="."]
one_shot = true

[node name="CastDelay" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RechargeTimer" to="." method="_on_recharge_timer_timeout"]
[connection signal="timeout" from="CastDelay" to="." method="_on_cast_delay_timeout"]
